Fixed warnings with files